--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </script>
     </video>
     <div class="center">
-<h5><span>n1ppers daun :(</span></h5>
+<h5><span>One Garage :(</span></h5>
 <h1>HellNara</h1>
-        <marquee aligt="center" scrollamount="5" width="540" style="width:335px;"><h5><a href="http://n1ppers.xyz/">n1ppers</a> <a href="http://n1ppers.xyz/">n1ppers</a> <a href="http://n1ppers.xyz/">n1ppers</a></h5></marquee>
+        <marquee aligt="center" scrollamount="5" width="540" style="width:335px;"><h5><a href="https://vk.com/id225828690">VK</a> <a href="http://steamcommunity.com/id/HellNara/">STEAM</a> <a href="http://n1ppers.xyz/">n1ppers</a></h5></marquee>
 </div>
     
 
